[package]
name = "monitoring"
version = "0.1.0"
edition = "2021"
authors = ["Artem Oganesyan"]

[dependencies]
axum = "0.7.9"
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }
tower = "0.5.1"
dotenv = "0.15.0"
serde = { version = "1.0.215", features = ["derive"] }
futures = "0.3.31"
chrono = "0.4.38"
